--- a/django/base.html
+++ b/django/base.html
@@ -303,3 +303,122 @@
 <hr />
 
     <!--  /header  -->
+
+
+<div class="container"> 
+    <div class="col-xs-2">
+
+        <div class="hidden-print" role="complementary">
+            <ul class="nav">
+                <li class="side_bar">
+                    <a href="<?=site_url()?>">大赛首页</a>
+                </li>
+                <li class="side_bar">
+                    <a href="<?=site_url('search_competition/rules')?>">大赛规则</a>
+                </li>
+                <li class="side_bar">
+                    <a href="<?=site_url('search_competition/register')?>">线上注册</a>
+                </li>
+                <li class="side_bar">
+                    <a href="<?=site_url('search_competition/signup')?>">线下报名</a>
+                </li>
+                <li class="side_bar">
+                    <a href="<?= isset($login)
+                                ? site_url('search_competition/competition') 
+                                : site_url('search_competition/login')?>">开始答题</a>
+                </li>
+                <li class="side_bar">
+                    <a href="<?=site_url('search_competition/scores')?>">查看成绩</a>
+                </li>
+            </ul>
+        </div>
+    </div>        
+
+
+{%block content%}
+{%endblock%}
+
+
+
+
+
+    <!--  footer  -->
+
+<div class="container">
+    <footer>
+    <p>Copyright © 2014 ZJU <a href="http://baiduzju.org">Baidu Club</a></p>
+    </footer>
+</div>
+
+
+<script src="<?=base_url('js/jQuery.js')?>"></script>
+<script src="<?=base_url('js/bootstrap.min.js')?>"></script>
+<script src="<?=base_url('js/baidu.js')?>"></script>
+
+<script type="text/javascript">
+
+$(document).ready(function(){
+    $('input').iCheck({
+        checkboxClass: 'icheckbox_square-grey',
+        radioClass: 'iradio_square-grey',
+        increaseArea: '20%' // optional
+    });
+
+
+    $(".pinned").pin({
+        containerSelector: ".container", minWidth: 940
+    });
+
+    $("#login_username").focus(function(){
+        $("#login_username_label").css("background-position", "0 -108px");
+    });
+
+    $("#login_username").blur(function(){
+        $("#login_username_label").css("background-position", "0 -68px");
+    });
+
+    $("#login_password").focus(function(){
+        $("#login_password_label").css("background-position", "0 -187px");
+    });
+
+    $("#login_password").blur(function(){
+        $("#login_password_label").css("background-position", "0 -147px");
+    });
+
+});
+
+/*
+$(document).ready(function(){
+
+
+    $team_mun = $("#team_mun").val();
+    while ( $team_mun++ > default_num )
+    {    
+        $("#submit_label").append(
+            '<p class="tmumber left"><span class="label label-success">1号队员</span></p>
+            <div class="input-group">
+                <span class="input-group-addon">姓名</span>
+                <input type="text" class="form-control" placeholder=" 姓名" name="_name">
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">学号</span>
+                <input type="text" class="form-control" placeholder=" 学号" name="_id">
+            </div>            
+            <br/>
+            <div class="input-group">
+                <span class="input-group-addon">????</span>
+                <input type="text" class="form-control" placeholder="????" name="_????">
+            </div>'
+        );
+        ++default_num;
+    }
+});
+*/
+</script>
+
+</body>
+
+
+</html>
+
+    <!--  /footer  -->
