forget what happened = ="

--- a/django/base.html
+++ b/django/base.html
@@ -19,7 +19,8 @@
 <meta charset="UTF-8" />
 <title>搜索大赛</title> 
 
-<link rel="stylesheet" href="<?=base_url('css/bootstrap.css')?> ">
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 <link rel="stylesheet" href="<?=base_url('css/square/grey.css')?>" >
 <!-- <link rel="stylesheet" href="<?=base_url('css/flat-ui.css')?>" > -->
 <style type="text/css">
